kanc/src/tests/sample_code/should_fail/single_file/ast_simplification/labeled_params/duplicate_labels/explicit_implicit.k
type Nat {
    .o: Nat,
    .s(n: Nat): Nat,
}

let f = fun _(y~x: Nat, ~y: Nat): Nat {
    Nat.o
};
